--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Parking Lot",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
